fix: add z-index for header

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -3,6 +3,7 @@
   position: fixed;
   width: 100%;
   background-color: #FFFFFF;
+  z-index: 2;
 
   &__container {
     display: flex;
